# oxide-relay

./: .env.example  .gitignore  Cargo.toml  REMOTE_TESTING.md  architecture.md  compose.yaml  database.md  localization_plan.md  oxide-relay-en.import.json  plan.md  readme.md  reset-password.md  test-terms-60000.json
backend/: Cargo.toml  config.toml.example
backend/src/: app.rs  auth.rs  errors.rs  lib.rs  main.rs  util.rs
backend/src/config/: mod.rs  settings.rs
backend/src/db/: bootstrap.rs  mod.rs  pool.rs
backend/src/http/: admin.rs  delivery.rs  docs.rs  mod.rs  projects.rs  translations.rs
backend/src/repository/: members.rs  mod.rs  password_resets.rs  permissions.rs  projects.rs  sessions.rs  translations.rs  users.rs
backend/tests/: api.rs
deploy/: Dockerfile  OPERATIONS.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  i18n.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/components/: AppLayout.tsx  ErrorCard.tsx  LoadingScreen.tsx  MetaRow.tsx
frontend/src/hooks/: usePermissionSet.ts  useSession.ts
frontend/src/lib/: permissions.ts
frontend/src/locales/: en.json  ru.json  srb.json
frontend/src/pages/: LoginPage.tsx  ProjectPage.tsx  ProjectsPage.tsx  ResetPasswordPage.tsx  UsersPage.tsx
frontend/src/pages/project/: ProjectDeliveryLinksPanel.tsx  ProjectMembersPanel.tsx  ProjectResourcesPanel.tsx  (+1 more)
migrations/: .gitkeep  0001_initial_schema.sql  0002_password_reset_tokens.sql
scripts/: dev-backend.sh  dev-frontend.sh
