[package]
name = "oxiderelay-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2 = "0.5"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
utoipa = { version = "5.4", features = ["axum_extras", "time", "uuid"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.20"
